--- a/src/Mzayad.Web/Mzayad.Web.csproj
+++ b/src/Mzayad.Web/Mzayad.Web.csproj
@@ -254,6 +254,7 @@
     <Compile Include="Areas\admin\Models\Products\AddViewModel.cs" />
     <Compile Include="Areas\admin\Models\Products\EditViewModel.cs" />
     <Compile Include="Areas\admin\Models\Products\IndexViewModel.cs" />
+    <Compile Include="Areas\admin\Models\Specification\AddViewModel.cs" />
     <Compile Include="Areas\admin\Models\Users\DetailsViewModel.cs" />
     <Compile Include="Areas\admin\Models\Users\IndexViewModel.cs" />
     <Compile Include="Areas\Api\ApiAreaRegistration.cs" />
@@ -479,6 +480,7 @@
     <Content Include="Areas\admin\Views\Specifications\Index.cshtml" />
     <Content Include="Areas\admin\Views\Specifications\Add.cshtml" />
     <Content Include="Areas\admin\Views\Specifications\Delete.cshtml" />
+    <Content Include="Areas\admin\Views\Specifications\Edit.cshtml" />
     <None Include="Content\site.less" />
     <Content Include="Fonts\glyphicons-halflings-regular.woff" />
     <Content Include="Fonts\glyphicons-halflings-regular.ttf" />
