MZ-26 Capture Product Specification List

--- a/src/Mzayad.Data/Mzayad.Data.csproj
+++ b/src/Mzayad.Data/Mzayad.Data.csproj
@@ -125,6 +125,10 @@
     <Compile Include="Migrations\201503051308345_modifyNameLengthInSpecification.Designer.cs">
       <DependentUpon>201503051308345_modifyNameLengthInSpecification.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201503071211582_modifyValueLengthInProductSpecifications.cs" />
+    <Compile Include="Migrations\201503071211582_modifyValueLengthInProductSpecifications.Designer.cs">
+      <DependentUpon>201503071211582_modifyValueLengthInProductSpecifications.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -183,6 +187,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201503051308345_modifyNameLengthInSpecification.resx">
       <DependentUpon>201503051308345_modifyNameLengthInSpecification.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201503071211582_modifyValueLengthInProductSpecifications.resx">
+      <DependentUpon>201503071211582_modifyValueLengthInProductSpecifications.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
