MZ-30 added Auction.ReservePrice

--- a/src/Mzayad.Data/Mzayad.Data.csproj
+++ b/src/Mzayad.Data/Mzayad.Data.csproj
@@ -133,6 +133,10 @@
     <Compile Include="Migrations\201503091000271_AddProductPurchasePriceAndQuantity.Designer.cs">
       <DependentUpon>201503091000271_AddProductPurchasePriceAndQuantity.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201503091033062_AddAuctionReservePrice.cs" />
+    <Compile Include="Migrations\201503091033062_AddAuctionReservePrice.Designer.cs">
+      <DependentUpon>201503091033062_AddAuctionReservePrice.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -197,6 +201,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201503091000271_AddProductPurchasePriceAndQuantity.resx">
       <DependentUpon>201503091000271_AddProductPurchasePriceAndQuantity.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201503091033062_AddAuctionReservePrice.resx">
+      <DependentUpon>201503091033062_AddAuctionReservePrice.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
