--- a/src/Mzayad.Web/Web.Release.config
+++ b/src/Mzayad.Web/Web.Release.config
@@ -2,14 +2,23 @@
 <configuration xmlns:xdt="http://schemas.microsoft.com/XML-Document-Transform">
   <system.web>
     <compilation xdt:Transform="RemoveAttributes(debug)" />
-    <customErrors mode="On" xdt:Transform="Replace" />
+    <customErrors mode="On" defaultRedirect="/500.html" redirectMode="ResponseRewrite" xdt:Transform="Insert">
+      <error statusCode="404" redirect="/404.html" />
+      <error statusCode="500" redirect="/500.html" />
+    </customErrors>
+    <httpModules>
+      <add name="RaygunErrorModule" type="Mindscape.Raygun4Net.RaygunHttpModule" xdt:Transform="Insert" />
+    </httpModules>
   </system.web>
   <system.webServer>
     <httpErrors errorMode="Custom" existingResponse="Replace" xdt:Transform="Insert">
-      <remove statusCode="404"/>
-      <error statusCode="404" path="404.html" responseMode="File"/>
-      <remove statusCode="500"/>
-      <error statusCode="500" path="500.html" responseMode="File"/>
+      <remove statusCode="404" />
+      <error statusCode="404" path="404.html" responseMode="File" />
+      <remove statusCode="500" />
+      <error statusCode="500" path="500.html" responseMode="File" />
     </httpErrors>
+    <modules>
+      <add name="RaygunErrorModule" type="Mindscape.Raygun4Net.RaygunHttpModule" xdt:Transform="Insert" />
+    </modules>
   </system.webServer>
 </configuration>
