--- a/src/Mzayad.Web/Web.config
+++ b/src/Mzayad.Web/Web.config
@@ -2,7 +2,9 @@
 <configuration>
   <configSections>
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    <section name="RaygunSettings" type="Mindscape.Raygun4Net.RaygunSettings, Mindscape.Raygun4Net" />
   </configSections>
+  <RaygunSettings apikey="gXc0djLmI5/xbw6e3UsK4w==" />
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\Mzayad.mdf;Initial Catalog=Mzayad;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
@@ -21,10 +23,6 @@
     <add key="SiteName" value="Mzayad.com" />
   </appSettings>
   <system.web>
-    <customErrors mode="Off" defaultRedirect="/500.html" redirectMode="ResponseRewrite">
-      <error statusCode="404" redirect="/404.html" />
-      <error statusCode="500" redirect="/500.html" />
-    </customErrors>
     <anonymousIdentification enabled="true" />
     <authentication mode="Forms">
       <forms loginUrl="/Account/SignIn/" cookieless="UseCookies" />
@@ -37,7 +35,7 @@
     </httpModules>
   </system.web>
   <!-- ReSharper disable WebConfig.WebConfigPathWarning -->
-  <location path="Admin">
+  <location path="admin">
     <system.web>
       <!-- 25MB in kilobytes -->
       <httpRuntime maxRequestLength="25600" />
