--- a/src/Mzayad.Web/packages.config
+++ b/src/Mzayad.Web/packages.config
@@ -39,6 +39,8 @@
   <package id="Microsoft.Owin.Security.Cookies" version="3.0.0" targetFramework="net45" />
   <package id="Microsoft.Owin.Security.OAuth" version="3.0.0" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
+  <package id="Mindscape.Raygun4Net.Core" version="5.0.0" targetFramework="net451" />
+  <package id="Mindscape.Raygun4Net.Mvc" version="5.0.0" targetFramework="net451" />
   <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net45" />
   <package id="OrangeJetpack.Base.Core" version="0.0.5" targetFramework="net451" />
   <package id="OrangeJetpack.Base.Web" version="0.0.6" targetFramework="net45" />
