MZ-27 Add CategoryNotification Entity With DB Migration Add NotificationService Add UserController.Notifications() With View Move ~/Area/admin/Products/Views/ProductCategories.cshtml  to ~/Views/Shared. Change Product Edit View to Call ~/Area/admin/Products/Views/ProductCategories.cshtml And send the model

--- a/src/Mzayad.Models/Mzayad.Models.csproj
+++ b/src/Mzayad.Models/Mzayad.Models.csproj
@@ -65,6 +65,7 @@
     <Compile Include="ApplicationUser.cs" />
     <Compile Include="Auction.cs" />
     <Compile Include="Category.cs" />
+    <Compile Include="CategoryNotification.cs" />
     <Compile Include="EmailTemplate.cs" />
     <Compile Include="Enum\AuctionStatus.cs" />
     <Compile Include="Enum\EmailTemplateType.cs" />
