--- a/src/Mzayad.Data/Mzayad.Data.csproj
+++ b/src/Mzayad.Data/Mzayad.Data.csproj
@@ -137,6 +137,10 @@
     <Compile Include="Migrations\201503091033062_AddAuctionReservePrice.Designer.cs">
       <DependentUpon>201503091033062_AddAuctionReservePrice.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201503100814581_AddCategoryNotification.cs" />
+    <Compile Include="Migrations\201503100814581_AddCategoryNotification.Designer.cs">
+      <DependentUpon>201503100814581_AddCategoryNotification.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -204,6 +208,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201503091033062_AddAuctionReservePrice.resx">
       <DependentUpon>201503091033062_AddAuctionReservePrice.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201503100814581_AddCategoryNotification.resx">
+      <DependentUpon>201503100814581_AddCategoryNotification.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
