--- a/src/Mzayad.Web/Mzayad.Web.csproj
+++ b/src/Mzayad.Web/Mzayad.Web.csproj
@@ -314,6 +314,7 @@
     <Compile Include="Models\Account\UserAccountViewModel.cs" />
     <Compile Include="Models\Shared\AddressViewModel.cs" />
     <Compile Include="Models\User\ChangePasswordViewModel.cs" />
+    <Compile Include="Models\User\NotificationModelView.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
@@ -483,7 +484,7 @@
     <Content Include="Areas\admin\Views\Categories\Edit.cshtml" />
     <Content Include="Areas\admin\Views\Products\Add.cshtml" />
     <Content Include="Areas\admin\Views\Products\Edit.cshtml" />
-    <Content Include="Areas\admin\Views\Products\ProductCategories.cshtml" />
+    <Content Include="Views\Shared\ProductCategories.cshtml" />
     <Content Include="Content\image-uploader.css.map" />
     <Content Include="Content\image-uploader.less" />
     <Content Include="Areas\admin\Views\Auctions\SelectProduct.cshtml" />
@@ -589,6 +590,7 @@
     <Content Include="Views\Shared\_Layout.User.cshtml" />
     <Content Include="Views\User\_ViewStart.cshtml" />
     <Content Include="Views\User\EditAccount.cshtml" />
+    <Content Include="Views\User\Notifications.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
