MZ-27 added notifications for created auctions

--- a/src/Mzayad.Data/Mzayad.Data.csproj
+++ b/src/Mzayad.Data/Mzayad.Data.csproj
@@ -141,6 +141,10 @@
     <Compile Include="Migrations\201503100814581_AddCategoryNotification.Designer.cs">
       <DependentUpon>201503100814581_AddCategoryNotification.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201503101633490_AddAuctionCreatedEmailTemplate.cs" />
+    <Compile Include="Migrations\201503101633490_AddAuctionCreatedEmailTemplate.Designer.cs">
+      <DependentUpon>201503101633490_AddAuctionCreatedEmailTemplate.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -211,6 +215,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201503100814581_AddCategoryNotification.resx">
       <DependentUpon>201503100814581_AddCategoryNotification.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201503101633490_AddAuctionCreatedEmailTemplate.resx">
+      <DependentUpon>201503101633490_AddAuctionCreatedEmailTemplate.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
