MZ-34 added AuctionService.GetCurrentAuctions(); added tests; renamed AuctionServices to AuctionService

--- a/src/Mzayad.Services.Tests/Mzayad.Services.Tests.csproj
+++ b/src/Mzayad.Services.Tests/Mzayad.Services.Tests.csproj
@@ -57,6 +57,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AuctionServiceTests.cs" />
     <Compile Include="Fakes\InMemoryDataContext.cs" />
     <Compile Include="Fakes\InMemoryDataContextFactory.cs" />
     <Compile Include="NotificationServiceTests.cs" />
