--- a/src/Mzayad.Web/packages.config
+++ b/src/Mzayad.Web/packages.config
@@ -8,6 +8,11 @@
   <package id="EntityFramework" version="6.1.2" targetFramework="net45" />
   <package id="EPPlus" version="4.0.3" targetFramework="net451" />
   <package id="FontAwesome" version="4.2.0" targetFramework="net45" />
+  <package id="Glimpse" version="1.8.6" targetFramework="net451" />
+  <package id="Glimpse.Ado" version="1.7.3" targetFramework="net451" />
+  <package id="Glimpse.AspNet" version="1.9.2" targetFramework="net451" />
+  <package id="Glimpse.EF6" version="1.6.5" targetFramework="net451" />
+  <package id="Glimpse.Mvc5" version="1.5.3" targetFramework="net451" />
   <package id="Humanizer" version="1.33.7" targetFramework="net451" />
   <package id="jQuery" version="2.1.3" targetFramework="net45" />
   <package id="jQuery.UI.Combined" version="1.11.3" targetFramework="net451" />
