MZ-34 added auction closing properties

--- a/src/Mzayad.Data/Mzayad.Data.csproj
+++ b/src/Mzayad.Data/Mzayad.Data.csproj
@@ -149,6 +149,10 @@
     <Compile Include="Migrations\201503231152273_AddAuctionTitle.Designer.cs">
       <DependentUpon>201503231152273_AddAuctionTitle.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201503231711556_AddAuctionClosingProperties.cs" />
+    <Compile Include="Migrations\201503231711556_AddAuctionClosingProperties.Designer.cs">
+      <DependentUpon>201503231711556_AddAuctionClosingProperties.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -225,6 +229,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201503231152273_AddAuctionTitle.resx">
       <DependentUpon>201503231152273_AddAuctionTitle.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201503231711556_AddAuctionClosingProperties.resx">
+      <DependentUpon>201503231711556_AddAuctionClosingProperties.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
