--- a/src/Mzayad.Models/Mzayad.Models.csproj
+++ b/src/Mzayad.Models/Mzayad.Models.csproj
@@ -75,6 +75,7 @@
     <Compile Include="ProductSpecification.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Specification.cs" />
+    <Compile Include="Sponsor.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
