--- a/src/Mzayad.Web/packages.config
+++ b/src/Mzayad.Web/packages.config
@@ -55,5 +55,6 @@
   <package id="OrangeJetpack.Services.Client" version="0.0.24" targetFramework="net451" />
   <package id="Owin" version="1.0" targetFramework="net45" />
   <package id="RestSharp" version="105.0.0" targetFramework="net451" />
+  <package id="StackExchange.Redis" version="1.0.414" targetFramework="net451" />
   <package id="WebGrease" version="1.6.0" targetFramework="net45" />
 </packages>
