MZ-34 added ICacheService.Delete(); formatting home

--- a/src/Mzayad.Web/Mzayad.Web.csproj
+++ b/src/Mzayad.Web/Mzayad.Web.csproj
@@ -298,6 +298,7 @@
     <Compile Include="Core\Attributes\RoleAuthorizeAttribute.cs" />
     <Compile Include="Areas\admin\Models\Categories\AddViewModel.cs" />
     <Compile Include="Areas\admin\Models\Categories\EditViewModel.cs" />
+    <Compile Include="Core\Configuration\CacheKeys.cs" />
     <Compile Include="Core\Configuration\ImageWidthConstants.cs" />
     <Compile Include="Core\Configuration\RouteInfo.cs" />
     <Compile Include="Controllers\UserController.cs" />
