MZ-34 added Bid entity and db migrations

--- a/src/Mzayad.Data/Mzayad.Data.csproj
+++ b/src/Mzayad.Data/Mzayad.Data.csproj
@@ -157,6 +157,10 @@
     <Compile Include="Migrations\201503301122565_AddSponsor_EditProduct.Designer.cs">
       <DependentUpon>201503301122565_AddSponsor_EditProduct.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201503311430571_AddBids.cs" />
+    <Compile Include="Migrations\201503311430571_AddBids.Designer.cs">
+      <DependentUpon>201503311430571_AddBids.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -239,6 +243,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201503301122565_AddSponsor_EditProduct.resx">
       <DependentUpon>201503301122565_AddSponsor_EditProduct.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201503311430571_AddBids.resx">
+      <DependentUpon>201503311430571_AddBids.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
