MZ-50 create AvatarService and ~/Areas/Admin/AvatarsController.

--- a/src/Mzayad.Services/Mzayad.Services.csproj
+++ b/src/Mzayad.Services/Mzayad.Services.csproj
@@ -63,6 +63,7 @@
   <ItemGroup>
     <Compile Include="AddressService.cs" />
     <Compile Include="AuctionService.cs" />
+    <Compile Include="AvatarService.cs" />
     <Compile Include="BidService.cs" />
     <Compile Include="CategoryService.cs" />
     <Compile Include="EmailTemplateService.cs" />
