--- a/src/Mzayad.Web/Mzayad.Web.csproj
+++ b/src/Mzayad.Web/Mzayad.Web.csproj
@@ -282,6 +282,7 @@
     <Compile Include="Areas\admin\Controllers\UsersController.cs" />
     <Compile Include="Areas\admin\Models\Auctions\AddEditViewModel.cs" />
     <Compile Include="Areas\admin\Models\Auctions\IndexViewModel.cs" />
+    <Compile Include="Areas\admin\Models\Avatar\AvatarAddViewModel.cs" />
     <Compile Include="Areas\admin\Models\Products\AddViewModel.cs" />
     <Compile Include="Areas\admin\Models\Products\EditViewModel.cs" />
     <Compile Include="Areas\admin\Models\Products\IndexViewModel.cs" />
@@ -542,6 +543,8 @@
     <Content Include="Areas\admin\Views\Sponsors\Add.cshtml" />
     <Content Include="Areas\admin\Views\Sponsors\_AddEdit.cshtml" />
     <Content Include="Areas\admin\Views\Sponsors\Edit.cshtml" />
+    <Content Include="Areas\admin\Views\Avatars\Index.cshtml" />
+    <Content Include="Areas\admin\Views\Avatars\Add.cshtml" />
     <None Include="Content\site.less" />
     <Content Include="Fonts\glyphicons-halflings-regular.woff" />
     <Content Include="Fonts\glyphicons-halflings-regular.ttf" />
