--- a/src/Mzayad.Web/packages.config
+++ b/src/Mzayad.Web/packages.config
@@ -18,6 +18,7 @@
   <package id="jQuery" version="2.1.3" targetFramework="net45" />
   <package id="jQuery.UI.Combined" version="1.11.3" targetFramework="net451" />
   <package id="jQuery.Validation" version="1.13.1" targetFramework="net45" />
+  <package id="knockoutjs" version="3.3.0" targetFramework="net451" />
   <package id="MarkdownSharp" version="1.13.0.0" targetFramework="net451" />
   <package id="MaxMind.Db" version="1.0.0.0" targetFramework="net451" />
   <package id="MaxMind.GeoIP2" version="2.1.0.0" targetFramework="net451" />
